terraform/modules/security/main.tf
resource "aws_security_group" "public_sg" {
  name        = var.public_sg_name
  description = "Allow HTTP/HTTPS traffic from internet"
  vpc_id      = var.vpc_id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = var.public_sg_name
  }
}

resource "aws_security_group" "private_sg" {
  name        = var.private_sg_name
  description = "Allow app ports from public SG"
  vpc_id      = var.vpc_id

  ingress {
    from_port       = 3000
    to_port         = 3000
    protocol        = "tcp"
    security_groups = [aws_security_group.public_sg.id]
  }

  ingress {
    from_port       = 8080
    to_port         = 8080
    protocol        = "tcp"
    security_groups = [aws_security_group.public_sg.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = var.private_sg_name
  }
}

resource "aws_security_group" "bastion_sg" {
  name        = var.bastion_sg_name
  description = "Bastion host SG"
  vpc_id      = var.vpc_id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = var.bastion_sg_name
  }
}

resource "aws_security_group" "database_sg" {
  name        = var.database_sg_name
  description = "Allow MongoDB from private and bastion SGs"
  vpc_id      = var.vpc_id

  # Allow from private SG
  ingress {
    description     = "Allow from private SG"
    from_port       = 0
    to_port         = 65535
    protocol        = "tcp"
    security_groups = [aws_security_group.private_sg.id]
  }

  # Allow from bastion SG
  ingress {
    description     = "Allow from bastion SG"
    from_port       = 0
    to_port         = 65535
    protocol        = "tcp"
    security_groups = [aws_security_group.bastion_sg.id]
  }

  # Allow self-communication inside the database SG
  ingress {
    description     = "Allow internal database SG traffic"
    from_port       = 0
    to_port         = 65535
    protocol        = "tcp"
    self            = true
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = var.database_sg_name
  }
}

// Secrets Manager for Password RDS

resource "aws_secretsmanager_secret" "rds_password" {
  name = "aws-infra-03-rds-password-1"
  description = "RDS master password for MySQL"
}

resource "aws_secretsmanager_secret_version" "rds_password_version" {
  secret_id     = aws_secretsmanager_secret.rds_password.id
  secret_string = "strong_password"
}

// Secrets Manager for Amamzon MQ

resource "aws_secretsmanager_secret" "rmq_password" {
  name = "aws-infra-03-rmq-password-1"
  description = "Password for Amamzon MQ"
}

resource "aws_secretsmanager_secret_version" "rmq_password_version" {
  secret_id     = aws_secretsmanager_secret.rmq_password.id
  secret_string = "strong_password"
}
